--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ ext{
     kotlinTestVersion='1.3.61'
     junitJupiterVersion='5.6.0'
     jacksonVersion='2.9.0'
+    slf4jVersion='1.7.30'
 }
 
 
