--- a/simple-orm-test/build.gradle
+++ b/simple-orm-test/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
 
-
+    testCompile("ch.qos.logback:logback-classic:$logbackClassicVersion")
     testCompile(project(":simple-orm-core"))
     testCompile(project(":common-utils"))
 }
