--- a/simple-orm-core/build.gradle
+++ b/simple-orm-core/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id "org.jetbrains.kotlin.plugin.allopen" version "1.3.61"
     id "org.jetbrains.kotlin.plugin.noarg" version "1.3.61"
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
+    id "org.jetbrains.kotlin.plugin.jpa" version "1.3.61"
 }
+
 
 apply plugin: 'java'
 apply plugin: 'org.jetbrains.kotlin.jvm'
@@ -27,6 +29,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-serialization"
     implementation "com.zaxxer:HikariCP:3.4.2"
 
+    compile group: 'cglib', name: 'cglib', version: '3.3.0'
+
     implementation("com.charleskorn.kaml:kaml:$kamlVersion")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0")
 
@@ -35,8 +39,8 @@ dependencies {
     compile("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion")
 
     testCompile("io.kotlintest:kotlintest-runner-junit5:3.4.2")
-
-    testCompile(project(":common-utils"))
+//    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.4.RELEASE'
+    compile(project(":common-utils"))
 }
 
 compileKotlin {
@@ -47,6 +51,7 @@ compileTestKotlin {
 }
 
 allOpen {
+    annotation("paulpaulych.utils.Open")
     annotation("javax.persistence.Entity")
     annotation("javax.persistence.MappedSuperclass")
     annotation("javax.persistence.Embeddable")
