--- a/simple-orm-core/build.gradle
+++ b/simple-orm-core/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id "org.jetbrains.kotlin.plugin.noarg" version "1.3.61"
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
     id "org.jetbrains.kotlin.plugin.jpa" version "1.3.61"
+    id 'maven-publish'
 }
 
 
@@ -11,7 +12,7 @@ apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'kotlinx-serialization'
 
 group 'paulpaulych.simple-orm'
-version '1.0-SNAPSHOT'
+version '1.0.1'
 
 sourceCompatibility = 1.8
 
@@ -29,7 +30,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-serialization"
     implementation "com.zaxxer:HikariCP:3.4.2"
 
-    compile group: 'cglib', name: 'cglib', version: '3.3.0'
+    implementation group: 'cglib', name: 'cglib', version: '3.3.0'
 
     implementation("com.charleskorn.kaml:kaml:$kamlVersion")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0")
@@ -39,8 +40,7 @@ dependencies {
     compile("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion")
 
     testCompile("io.kotlintest:kotlintest-runner-junit5:3.4.2")
-//    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.4.RELEASE'
-    compile(project(":common-utils"))
+    implementation(project(":common-utils"))
 }
 
 compileKotlin {
@@ -56,3 +56,17 @@ allOpen {
     annotation("javax.persistence.MappedSuperclass")
     annotation("javax.persistence.Embeddable")
 }
+
+publishing {
+    repositories {
+        maven {
+            url "file://<your home>/.m2/repository/"
+        }
+    }
+    publications {
+        testing(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
