--- a/common-utils/build.gradle
+++ b/common-utils/build.gradle
@@ -4,18 +4,15 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
 }
 
+apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'kotlinx-serialization'
 
 group 'paulpaulych.simple-orm'
-version '1.0-SNAPSHOT'
+version '1.0.1'
 
 sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
 
 test {
     useJUnitPlatform()
@@ -33,6 +30,7 @@ dependencies {
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
@@ -41,4 +39,15 @@ allOpen {
     annotation("javax.persistence.Entity")
     annotation("javax.persistence.MappedSuperclass")
     annotation("javax.persistence.Embeddable")
+}
+
+publishing {
+    repositories {
+        mavenLocal()
+    }
+    publications {
+        testing(MavenPublication) {
+            from components.java
+        }
+    }
 }
