--- a/simple-orm-core/build.gradle
+++ b/simple-orm-core/build.gradle
@@ -3,16 +3,16 @@ plugins {
     id "org.jetbrains.kotlin.plugin.noarg" version "1.3.61"
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.61'
     id "org.jetbrains.kotlin.plugin.jpa" version "1.3.61"
-    id 'maven-publish'
 }
 
 
 apply plugin: 'java'
+apply plugin: 'maven-publish'
 apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'kotlinx-serialization'
 
 group 'paulpaulych.simple-orm'
-version '1.0.1'
+version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
@@ -30,7 +30,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-serialization"
     implementation "com.zaxxer:HikariCP:3.4.2"
 
-    implementation group: 'cglib', name: 'cglib', version: '3.3.0'
+    compile group: 'cglib', name: 'cglib', version: '3.3.0'
 
     implementation("com.charleskorn.kaml:kaml:$kamlVersion")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0")
@@ -59,9 +59,7 @@ allOpen {
 
 publishing {
     repositories {
-        maven {
-            url "file://<your home>/.m2/repository/"
-        }
+        mavenLocal()
     }
     publications {
         testing(MavenPublication) {
@@ -69,4 +67,3 @@ publishing {
         }
     }
 }
-
