--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'maven-publish'
+    id 'war'
 }
 
 group 'paulpaulych.simple-orm'
