--- a/simple-orm-core/build.gradle
+++ b/simple-orm-core/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'kotlinx-serialization'
 
 group 'paulpaulych.simple-orm'
-version '1.1.3'
+version '1.2.0'
 
 sourceCompatibility = 1.8
 
@@ -28,18 +28,20 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation "org.jetbrains.kotlin:kotlin-serialization"
-    implementation "com.zaxxer:HikariCP:3.4.2"
 
-    compile group: 'cglib', name: 'cglib', version: '3.3.0'
+    compile("org.slf4j:slf4j-api:$slf4jVersion")
 
     implementation("com.charleskorn.kaml:kaml:$kamlVersion")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0")
 
-    compile("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
-    compile("com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion")
-    compile("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion")
+    compile group: 'cglib', name: 'cglib', version: '3.3.0'
+    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
+    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion")
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVersion")
 
     testCompile("io.kotlintest:kotlintest-runner-junit5:3.4.2")
+    testCompile "com.zaxxer:HikariCP:3.4.2"
+
     implementation(project(":common-utils"))
 }
 
