+ many to one support

--- a/simple-orm-core/build.gradle
+++ b/simple-orm-core/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "org.jetbrains.kotlin:kotlin-reflect"
     implementation "org.jetbrains.kotlin:kotlin-serialization"
+    implementation "io.mockk:mockk:1.9.3"
 
     compile("org.slf4j:slf4j-api:$slf4jVersion")
 
